--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,6 +1,4 @@
+<app-nav></app-nav>
+<app-home></app-home>
+<app-value></app-value>
 
-<div>
-    <h1>{{ title }} app is running!</h1>
-    
-    <app-value></app-value>
-</div>
