--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
-        <img class="card-img-top img-thumbnail" src="{{ user?.photoUrl }}" alt="{{ user.knownAs }}">
+        <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{ user.knownAs }}">
         <div class="card-body">
           <div>
             <strong>Location:</strong>
@@ -51,10 +51,14 @@
               <div class="form-inline">
                 <label for="city">City</label>
                 <input name="city" type="text" class="form-control" [(ngModel)]="user.city">
-                <label for="city">Country</label>
-                <input name="city" type="text" class="form-control" [(ngModel)]="user.country">
+                <label for="country">Country</label>
+                <input name="country" type="text" class="form-control" [(ngModel)]="user.country">
               </div>
             </form>
+          </tab>
+          <tab heading="Edit Photos">
+            <app-photo-editor [photos]="user.photos" 
+              (getMemberPhotoChange)="updateMemberPhoto($event)"></app-photo-editor>
           </tab>
           <tab heading="Interests">
             <h4>Interests</h4>
